# esrc-cqrs

./: .gitignore  Cargo.toml  devenv.nix
examples/cafe/: domain.rs  error.rs  main.rs  projector.rs  service.rs  tab.rs  table.rs
src/: command.rs  error.rs  lib.rs  projector.rs  query.rs  registry.rs
src/nats/: aggregate_command_handler.rs  client.rs  command_dispatcher.rs  durable_projector_handler.rs  live_view_query.rs  memory_view_query.rs  mod.rs  projector_runner.rs  query_dispatcher.rs
src/nats/client/: cqrs_client.rs  mod.rs
src/nats/command/: aggregate_command_handler.rs  mod.rs  service_command_handler.rs
src/nats/query/: live_view_query.rs  memory_view_query.rs  mod.rs
tests/: integration_nats.rs
