[package]
name = "esrc-cqrs"
description = "CQRS command and event handler registry for the esrc crate"
readme = false
version = "0.1.0"

license = "MIT"
authors = ["Wyatt Lindquist <wquist@users.noreply.github.com>"]
repository = "https://github.com/wquist/esrc"
categories = ["asynchronous"]

rust-version = "1.79"
edition = "2021"

[features]
default = ["nats"]
nats = ["dep:async-nats", "esrc/nats", "dep:serde_json", "dep:serde"]

[dependencies]
esrc = { git = "https://github.com/eloback/esrc.git", branch="feature/cqrs-framework", version = "0.3.0" }
async-nats = { version = "0.46", optional = true }
futures = "0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
trait-variant = "0.1"
uuid = { version = "1.8", features = ["serde", "v4"] }

[[example]]
name = "cafe"
path = "examples/cafe/main.rs"
required-features = ["nats"]
